# Medical-Insurance-Cost-Prediction

./: Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml
insurance_predictor/: __init__.py  predictor.py
insurance_predictor/data/: insurance.csv
